--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ blog = "blog/:slug/"
 [params]
 dateform = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 EST"
-description = "Example blog"
+description = "Salva Alcántara's blog"
 copyright = "Copyright © 2017 Salva Alcántara"
 logofile = "img/logo.png"
 faviconfile = "img/favicon.png"
