--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ googleAnalytics = "UA-106158048-1"
 pluralizelisttitles = false
 enableEmoji = true
 pygmentsCodefences = true
-pygmentsStyle = "pygments"
+pygmentsUseClasses = true
 
 [taxonomies]
 tag = "tags"
