--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ blog = "blog/:slug/"
 dateform = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 EST"
 description = "Salva Alcántara's blog"
-copyright = "Copyright © 2020 Salva Alcántara"
+copyright = "Copyright © 2017–2020 Salva Alcántara"
 logofile = "img/logo.png"
 faviconfile = "img/favicon.png"
 highlightjs = false
